--- a/app/templates/snippets/footer.html
+++ b/app/templates/snippets/footer.html
@@ -1,22 +1,5 @@
 <footer class="bg-white rounded-lg shadow m-4 dark:bg-gray-800">
-  <div class="container mx-auto flex flex-col items-center">
-    <div class="flex space-x-4 mb-4">
-      <a href="https://twitter.com" target="_blank">
-        <i class="fab fa-twitter text-white hover:text-blue-500"></i>
-      </a>
-      <a href="https://facebook.com" target="_blank">
-        <i class="fab fa-facebook text-white hover:text-blue-500"></i>
-      </a>
-      <a href="https://linkedin.com" target="_blank">
-        <i class="fab fa-linkedin text-white hover:text-blue-500"></i>
-      </a>
-      <a href="https://dribbble.com" target="_blank">
-        <i class="fab fa-dribbble text-white hover:text-pink-500"></i>
-      </a>
-      <a href="https://github.com" target="_blank">
-        <i class="fab fa-github text-white hover:text-gray-500"></i>
-      </a>
-    </div>
+  <div class="container mx-auto flex flex-col items-center p-5">
     <!-- Copyright text -->
     <p class="text-center text-sm">
       Copyright &copy; {{ current_year }}
