--- a/app/templates/snippets/portfolio.html
+++ b/app/templates/snippets/portfolio.html
@@ -11,7 +11,7 @@
     </div>
 
     <div
-      class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto"
+      class="w-full px-4 flex flex-wrap justify-items-center xl:w-10/12 xl:mx-auto"
     >
       <div class="mb-12 p-4 md:w-1/2">
         <div class="rounded-md shadow-md overflow-hidden">
